--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -33,5 +33,22 @@
       {{ end }}
       {{ end }}
     </div>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js" id="MathJax-script"></script>
+    <script>
+      MathJax = {
+	  tex: {
+              inlineMath: [
+		  ['$', '$'], ['\\(', '\\)']
+              ],
+              processEscapes: true,
+              processEnvironments: true
+	  },
+	  options: {
+              skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+	  }
+      };
+    </script>
   </section>
 </footer>
