add toc in layout for nat topic parallel julia workshop

--- a/layouts/julia202202/single.html
+++ b/layouts/julia202202/single.html
@@ -31,6 +31,16 @@
     <header>
       <div class="post-title">
         <h1 class="title">{{ .Title }}</h1>
+	  {{ if .TableOfContents }}
+      <br>
+      <div class="toggle">
+      	<i class="fas fa-plus-circle"></i>
+	&nbsp;Table of contents
+      </div>
+      <div class="panel">
+	{{ .TableOfContents }}
+      </div>
+      {{ end }}
       </div>
     </header>
 
@@ -74,4 +84,19 @@
 
     {{ partial "posts/math.html" . }}
 </section>
+<script>
+  var acc = document.getElementsByClassName("toggle")
+  var i
+  for (i = 0; i < acc.length; i++) {
+      acc[i].addEventListener("click", function() {
+  	  this.classList.toggle("active")
+  	  var panel = this.nextElementSibling
+  	  if (panel.style.maxHeight){
+  	      panel.style.maxHeight = null
+  	  } else {
+  	      panel.style.maxHeight = panel.scrollHeight + "px"
+  	  }
+      })
+  }
+</script>
 {{ end }}
