--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -480,3 +480,15 @@ ul {
     }
   }
 }
+
+.note-block {
+  color: #424a57;
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 1.7rem;
+  font-style: italic;
+  margin: 3rem 1rem 3rem 4rem;
+  line-height: 25px;
+  border-left: 1px solid #424a57;
+  padding-left: 2rem;
+  line-height: 2.5rem;
+}
