make visited and unvisited links more visible with new colors

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -18,8 +18,10 @@ $alt-fg-color: #000 !default;
 // $link-color: #477399 !default;
 // $link-color: #8d990c !default;
 // $link-color: #997507 !default;
-$link-color: #80961d !default;
+// $link-color: #80961d !default;
+$link-color: #2982d5 !default;
 // $link-color: #718519 !default;
 // $link-visited-color: #8755c4 !default;
 // $link-visited-color: #264d73 !default;
-$link-visited-color: #5b6b14 !default;
+// $link-visited-color: #5b6b14 !default;
+$link-visited-color: #8542d7 !default;
