change mailto from WestGrid training to rc-training@sfu.ca

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
     {{ end }}
     <br>
     <a href="https://twitter.com/WestGrid"><i class="fab fa-twitter fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
-    <a href="mailto:training@westgrid.ca"><i class="far fa-envelope-open fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
+    <a href="mailto:rc-training@sfu.ca"><i class="far fa-envelope-open fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
     <a href="/"><i class="fa fa-home fa-lg" style='color: #58585a'></i></a>
     <br>
     <br>
