--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
     <p class="footcontent"><a href="/info">{{ . }}</a></p>
     {{ end }}
     <br>
-    <a href="https://twitter.com/WestGrid"><i class="fab fa-twitter fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
+    <a href="https://twitter.com/Alliance_Can"><i class="fab fa-twitter fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
     <a href="mailto:rc-training@sfu.ca"><i class="far fa-envelope-open fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
     <a href="/"><i class="fa fa-home fa-lg" style='color: #58585a'></i></a>
     <br>
