root email link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
     {{ end }}
     <br>
     <a href="https://twitter.com/Alliance_Can"><i class="fab fa-twitter fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
-    <a href="email"><i class="far fa-envelope-open fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
+    <a href="/email"><i class="far fa-envelope-open fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
     <a href="/"><i class="fa fa-home fa-lg" style='color: #58585a'></i></a>
     <br>
     <br>
