--- a/layouts/shortcodes/c.html
+++ b/layouts/shortcodes/c.html
@@ -1,3 +1,1 @@
-<span class="c">
-  <a href="{{ .Get "link" }}">{{ .Get "topic" }}</a>
-</span>
+<span style="font-family: 'Source Code Pro', 'Lucida Console', monospace; font-size: 1.4rem; padding: 0.2rem; border-radius: 5%; background-color: #f0f3f3; color: #000000">{{ .Inner }}</span>
