add anchor to headers and format it

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -506,3 +506,13 @@ ul {
   padding-left: 2rem;
   line-height: 2.5rem;
 }
+// bootstrap SVG-Icons
+.bi {
+  display: inline-block;
+}
+.bi-link-45deg:hover {
+  width: 2.5rem;
+  height: 2.5rem;
+  color: var(--wk-accent-color-3);
+  fill: currentColor;
+}
