--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,8 +4,9 @@
     <p class="footcontent"><a href="/info">{{ . }}</a></p>
     {{ end }}
     <br>
+    <a href="https://github.com/WestDRI"><i class="fab fa-github fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
     <a href="https://twitter.com/Alliance_Can"><i class="fab fa-twitter fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
-    <a href="/email"><i class="far fa-envelope-open fa-lg" style='color: #58585a'></i></a>&ensp;&ensp;
+    <a href="/email"><i class="far fa-envelope-open fa-lg" style='color: #58585a'></i></a>
     <br>
     <br>
     <div style="font-size: 1.3rem;">
