--- a/layouts/shortcodes/question.html
+++ b/layouts/shortcodes/question.html
@@ -1,5 +1,5 @@
 <details>
-  <summary> <b>Question {{ .Get "num" }}</b>{{ (.Get 0) | markdownify }}</summary>
+  <summary> <b>Topic {{ .Get "num" }}</b>{{ (.Get 0) | markdownify }}</summary>
   {{ .Inner | markdownify }}
   <div>&nbsp;</div>
 </details>
