moved everything from content/olderWorkshops/ back to content/

--- a/layouts/julia202110/single.html
+++ b/layouts/julia202110/single.html
@@ -7,7 +7,7 @@
 
     <br>
     <center>
-      <a href="/parallel_julia">
+      <a href="/parallel_julia_oct21">
 	<i class="fas fa-level-up-alt fa-2x" style="color: #f17e1f"></i>
       </a>
       &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -50,7 +50,7 @@
 
     <br>
     <center>
-      <a href="/parallel_julia">
+      <a href="/parallel_julia_oct21">
 	<i class="fas fa-level-up-alt fa-2x" style="color: #f17e1f"></i>
       </a>
       &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
