--- a/layouts/bash1/single.html
+++ b/layouts/bash1/single.html
@@ -32,6 +32,7 @@
       <div class="post-title">
         <h1 class="title">{{ .Title }}</h1>
       </div>
+      {{ .TableOfContents }}
     </header>
 
     <div>
