--- a/layouts/bash1/single.html
+++ b/layouts/bash1/single.html
@@ -7,7 +7,7 @@
 
     <br>
     <center>
-      <a href="/bash-in-summer">
+      <a href="/bash">
 	<i class="fas fa-level-up-alt fa-2x" style="color: #f17e1f"></i>
       </a>
       &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -51,7 +51,7 @@
 
     <br>
     <center>
-      <a href="/bash-in-summer">
+      <a href="/bash">
 	<i class="fas fa-level-up-alt fa-2x" style="color: #f17e1f"></i>
       </a>
       &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
