started working on next week's Julia course

--- a/layouts/julia1/single.html
+++ b/layouts/julia1/single.html
@@ -7,7 +7,7 @@
 
     <br>
     <center>
-      <a href="/julia-in-summer">
+      <a href="/julia">
 	<i class="fas fa-level-up-alt fa-2x" style="color: #f17e1f"></i>
       </a>
       &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
@@ -61,7 +61,7 @@
 
     <br>
     <center>
-      <a href="/julia-in-summer">
+      <a href="/julia">
 	<i class="fas fa-level-up-alt fa-2x" style="color: #f17e1f"></i>
       </a>
       &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
