markdown attributes to add colour to notes

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -836,3 +836,26 @@ ul {
   color: var(--wk-accent-color-3);
   fill: currentColor;
 }
+
+// add markdown attributes for special text styles
+.danger,
+.note,
+.warning {
+  background: #efefef;
+  border-left-style: solid;
+  border-left-width: 0.4rem;
+  border-radius: 0.2rem;
+  margin-left: 0;
+  > p {
+    padding: 0.5rem 1rem;
+  }
+}
+.warning {
+  border-left-color: #ffbb00;
+}
+.note {
+  border-left-color: #0000ee;
+}
+.danger {
+  border-left-color: #ee0000;
+}
